packages/svelte/tests/validator/samples/illegal_spread_element-window/input.svelte
<script>
	let a = {};
</script>
<svelte:window {...a}></svelte:window>
