packages/svelte/tests/compiler-errors/samples/css-global-block-multiple/main.svelte
<style>
	.x :global, .y :global {}
</style>
